--- a/ProjectFrontend/app1/src/App.css
+++ b/ProjectFrontend/app1/src/App.css
@@ -131,3 +131,11 @@ button{
   margin-left: 37px;
 
 }
+.action-btn {
+  padding: 4px 8px !important;
+  font-size: 13px !important;
+  line-height: 1 !important;
+  width: auto !important;
+  height: auto !important;
+}
+
