--- a/ProjectFrontend/app1/src/App.css
+++ b/ProjectFrontend/app1/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -138,4 +138,4 @@ button{
   width: auto !important;
   height: auto !important;
 }
-
+ */
